Fixed Figure 4 and Table 3 going over lines.
- Added hypen's to split headers over lines to prevent from text overlap in Table 3 and Figure 4.
- "environnementaux" changed to "environ-nementaux"
- "Caractéristiques" changed to "Caractéris-tiques"

--- a/guidelinesWP_FN/05-chap5.Rmd
+++ b/guidelinesWP_FN/05-chap5.Rmd
@@ -87,8 +87,8 @@ Critères & Justification et exemples de caractéristiques & Exemples de sources
 \hline
 \endhead
 Menaces  & Les menaces propres à l’UC peuvent avoir une incidence sur les taux de survie, la croissance et/ou le succès de la reproduction et, par conséquent, sur les états et les tendances & Les modifications de l’écosystème, y compris l’extraction de l’eau, la foresterie, les incendies, l’agriculture ainsi que le développement, la pêche, la pollution, l’aquaculture et les impacts génétiques des écloseries & Évaluations publiées sur les menaces et l’habitat par UC \\
-Facteurs environnementaux  & Les conditions climatiques propres à l’UC peuvent avoir une incidence sur la survie, la croissance, la maturation ou le succès de reproduction et donc sur l’état et les tendances, soit en raison des facteurs environnementaux eux-mêmes, soit en raison de l’interaction de différents environnements avec des menaces anthropiques communes  & Eau douce: gradient fluvial, connectivité, macroclimat de l’habitat de fraie et d’élevage, régime hydrologique (p. ex., (1) pour le saumon chinook). Milieu marin: remontée d’eau, courants, productivité de l’environnement littoral à l’entrée de l’océan  &  Répartition des zones d’adaptation d’eau douce et marine (2), zones biogéoclimatiques décrivant les macroclimats, comme dans (3), caractéristiques de l’habitat fournies dans les évaluations des stocks propres à l’UC, savoir autochtone.\\
-Caractéristiques du cycle biologique &  Les UC ayant les mêmes caractéristiques du cycle biologique, comme l’âge à l’entrée dans l’océan, sont plus susceptibles de se chevaucher dans la répartition spatiale et temporelle et donc de répondre de manière similaire aux menaces communes et aux facteurs environnementaux, par rapport à celles qui ont des caractéristiques divergentes & Type de cycle biologique (type fluvial par opposition à type océanique pour le saumon chinook), âge à l’entrée dans l’océan, âge au retour, période de migration  &  Informations biologiques propres aux UC provenant des évaluations de stocks, savoir autochtone. \\
+Facteurs environ-nementaux  & Les conditions climatiques propres à l’UC peuvent avoir une incidence sur la survie, la croissance, la maturation ou le succès de reproduction et donc sur l’état et les tendances, soit en raison des facteurs environnementaux eux-mêmes, soit en raison de l’interaction de différents environnements avec des menaces anthropiques communes  & Eau douce: gradient fluvial, connectivité, macroclimat de l’habitat de fraie et d’élevage, régime hydrologique (p. ex., (1) pour le saumon chinook). Milieu marin: remontée d’eau, courants, productivité de l’environnement littoral à l’entrée de l’océan  &  Répartition des zones d’adaptation d’eau douce et marine (2), zones biogéoclimatiques décrivant les macroclimats, comme dans (3), caractéristiques de l’habitat fournies dans les évaluations des stocks propres à l’UC, savoir autochtone.\\
+Caractéris-tiques du cycle biologique &  Les UC ayant les mêmes caractéristiques du cycle biologique, comme l’âge à l’entrée dans l’océan, sont plus susceptibles de se chevaucher dans la répartition spatiale et temporelle et donc de répondre de manière similaire aux menaces communes et aux facteurs environnementaux, par rapport à celles qui ont des caractéristiques divergentes & Type de cycle biologique (type fluvial par opposition à type océanique pour le saumon chinook), âge à l’entrée dans l’océan, âge au retour, période de migration  &  Informations biologiques propres aux UC provenant des évaluations de stocks, savoir autochtone. \\
 Capacité de charge &  La taille de la population est liée à la probabilité de tomber en dessous des seuils critiques de conservation et donc à la vulnérabilité aux menaces et/ou aux perturbations aléatoires  & Abondance des géniteurs  &  Les informations biologiques propres à l’UC provenant d’évaluations de stocks, taille du bassin versant (4), savoir autochtone\\
 \hline
 (\#tab:CUrepres)
