--- a/guidelinesWP_FN/03-chap3.Rmd
+++ b/guidelinesWP_FN/03-chap3.Rmd
@@ -260,7 +260,7 @@ En plus des PRL fondés sur l’état des UC, nous avons élaboré des PRL le lo
 \node at (3.5,5.75) {Unité de gestion des stocks A};  
 
 \draw [line width = 1 mm] (1,2.5) -- (6,2.5);
-\node() [align=center] at (7,2.5) {PRL-\\fondés sur l’état des UC};
+\node() [align=center] at (7,2.5) {PRL-\\fondés sur\\ l’état\\ des UC};
 
 
 \node() [single arrow, shape border rotate=270, draw, minimum height=0.6 cm, minimum width=0.7 cm, single arrow head extend=0.1cm] at (3.5, 0.65) {}; 
