--- a/caseStudyWP_FN/04-chap4.Rmd
+++ b/caseStudyWP_FN/04-chap4.Rmd
@@ -651,13 +651,13 @@ La contribution des poissons d’écloserie aux abondances totales constitue une
 
 Nous recommandons quelques domaines de recherche supplémentaire pertinents pour cette UGS.
 
-– Les PRL de projection illustrés ici doivent être évalués davantage sur le plan de la sensibilité aux principales hypothèses structurelles, comme le modèle de stock-recrutement, et la présence et l’ampleur de l’anticompensation, entre autres hypothèses. Cette évaluation est particulièrement importante pour cette UGS en raison de l’absence de modèles de stock-recrutement évalués par les pairs. Nous avons fondé notre hypothèse d’une forme de Ricker de relation stock-recrutement à partir de son application à d’autres populations de saumon chinook en Colombie‑Britannique [@parkenHabitatbasedMethodsEstimate2006], mais cette forme pourrait ne pas représenter la variabilité élevée observée et la baisse de productivité qui sont maintenant courantes pour le saumon chinook. 
+* Les PRL de projection illustrés ici doivent être évalués davantage sur le plan de la sensibilité aux principales hypothèses structurelles, comme le modèle de stock-recrutement, et la présence et l’ampleur de l’anticompensation, entre autres hypothèses. Cette évaluation est particulièrement importante pour cette UGS en raison de l’absence de modèles de stock-recrutement évalués par les pairs. Nous avons fondé notre hypothèse d’une forme de Ricker de relation stock-recrutement à partir de son application à d’autres populations de saumon chinook en Colombie‑Britannique [@parkenHabitatbasedMethodsEstimate2006], mais cette forme pourrait ne pas représenter la variabilité élevée observée et la baisse de productivité qui sont maintenant courantes pour le saumon chinook. 
 
-– Dans le cadre de l’élaboration de PRL fondés sur l’état des UC par projection, les inlets ont été choisis comme l’échelle spatiale de la biodiversité requise pour la durabilité à l’échelle de l’UGS. Dans les analyses futures, d’autres hypothèses pourraient être envisagées, y compris les PRL calculés pour maintenir la diversité à l’échelle de l'UC en projetant les abondances à l’échelle de l'UC.  De plus, nous recommandons des recherches sur l’élaboration et l’évaluation de paramètres et de points de référence pour la répartition de l’abondance des géniteurs dans les UC, et de lignes directrices sur la façon de les intégrer dans les évaluations à l’échelle de l'UC dans le cadre de la PSS.
+* Dans le cadre de l’élaboration de PRL fondés sur l’état des UC par projection, les inlets ont été choisis comme l’échelle spatiale de la biodiversité requise pour la durabilité à l’échelle de l’UGS. Dans les analyses futures, d’autres hypothèses pourraient être envisagées, y compris les PRL calculés pour maintenir la diversité à l’échelle de l'UC en projetant les abondances à l’échelle de l'UC.  De plus, nous recommandons des recherches sur l’élaboration et l’évaluation de paramètres et de points de référence pour la répartition de l’abondance des géniteurs dans les UC, et de lignes directrices sur la façon de les intégrer dans les évaluations à l’échelle de l'UC dans le cadre de la PSS.
 
-– Les futures itérations des évaluations multidimensionnelles de l’état utilisées dans l’Explorateur pourraient comprendre des renseignements sur la répartition des géniteurs dans les inlets compris dans les UC afin d’intégrer cette plus petite échelle de la biodiversité. 
+* Les futures itérations des évaluations multidimensionnelles de l’état utilisées dans l’Explorateur pourraient comprendre des renseignements sur la répartition des géniteurs dans les inlets compris dans les UC afin d’intégrer cette plus petite échelle de la biodiversité. 
 
-– Une évaluation plus poussée de l’influence des poissons d’écloserie sur l’abondance des géniteurs, y compris l’étendue et l’ampleur de l’errance entre les bassins hydrographiques, est justifiée pour cette UGS, ainsi que pour d’autres UGS de saumon chinook.
+* Une évaluation plus poussée de l’influence des poissons d’écloserie sur l’abondance des géniteurs, y compris l’étendue et l’ampleur de l’errance entre les bassins hydrographiques, est justifiée pour cette UGS, ainsi que pour d’autres UGS de saumon chinook.
 
 
 
