--- a/caseStudyWP_FN/bib/refs.bib
+++ b/caseStudyWP_FN/bib/refs.bib
@@ -1182,7 +1182,8 @@ Section: Report},
 
 @article{holtGuidelinesDefiningLimitInpress,
 	title = {Guidelines for {Defining} {Limit} {Reference} {Points} for {Pacific} {Salmon} {Stock} {Management} {Units}},
-	volume = {202n/nnn},
+	volume = {2023/009},
+	year = {2023},
 	journal = {Can. Sci. Advis. Sec. Res. Doc.},
 	author = {Holt, Carrie A. and Holt, Kendra and Warkentin, Luke and Wor, Catarina and Connors, Brendan and Grant, Sue and Huang, Ann-Marie and Marentette, Julie},
 }
